Fix orange behind user container

--- a/packages/frontend/hableet-theme/src/components/user-container/UserContainer.scss
+++ b/packages/frontend/hableet-theme/src/components/user-container/UserContainer.scss
@@ -22,8 +22,8 @@
     }
 
     &:hover .member-avatar {
-      background-color: #e88b16;
-    }
+      background-color: #001726;
+  }
 
     .member-details {
       padding: 0 15px;
